# honest-ear

./: .env.example  .gitignore  README.md  debug-process-upload-latency.md  debug-upload-pending-delay.md  debug-web-tts-playback.md  pyproject.toml
.dbg/: process-upload-latency.env  trae-debug-log-process-upload-latency.ndjson
data/samples/: phase1_eval_samples.jsonl
docs/: IMPLEMENTATION-PLAN.md
scripts/: download-asr-models.sh  start-service.sh
src/honest_ear/: __init__.py  api.py  asr.py  cli.py  config.py  download_models.py  fusion.py  llm.py  pipeline.py  samples.py  schemas.py  tts.py
src/honest_ear.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/honest_ear/web/: index.html  recorder.js
tests/: conftest.py  test_api.py  test_asr_local_only.py  test_fusion.py  test_llm.py
