[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honest-ear"
version = "0.1.0"
description = "Phase 1 prototype for HonestEar AI English speaking coach."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "HonestEar" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "typer>=0.15.0,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
asr = [
  "numpy>=2.2.0,<3.0.0",
  "soundfile>=0.13.0,<1.0.0",
  "torch>=2.6.0,<3.0.0",
  "transformers>=4.51.0,<5.0.0",
  "faster-whisper>=1.1.0,<2.0.0",
]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
honest-ear = "honest_ear.cli:app"
honest-ear-download-models = "honest_ear.download_models:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
